--- a/pizza-back/.env.example
+++ b/pizza-back/.env.example
@@ -1,4 +1,11 @@
-APP_NAME=Laravel
+WWWGROUP=1000
+WWWUSER=1000
+APP_PORT=8081
+FORWARD_DB_PORT=33061
+FORWARD_REDIS_PORT=63791
+VITE_PORT=51731
+
+APP_NAME=pizza-back
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
