--- a/pizza-back/docker-compose.yml
+++ b/pizza-back/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
     laravel.test:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.3
+            context: ./vendor/laravel/sail/runtimes/8.2
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
-        image: sail-8.3/app
+        image: sail-8.2/app
         extra_hosts:
             - 'host.docker.internal:host-gateway'
         ports:
@@ -20,7 +20,7 @@ services:
         volumes:
             - '.:/var/www/html'
         networks:
-            - sail
+            - default
         depends_on:
             - mysql
             - redis
@@ -39,7 +39,7 @@ services:
             - 'sail-mysql:/var/lib/mysql'
             - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         networks:
-            - sail
+            - default
         healthcheck:
             test:
                 - CMD
@@ -55,7 +55,7 @@ services:
         volumes:
             - 'sail-redis:/data'
         networks:
-            - sail
+            - default
         healthcheck:
             test:
                 - CMD
@@ -64,7 +64,7 @@ services:
             retries: 3
             timeout: 5s
 networks:
-    sail:
+    default:
         driver: bridge
 volumes:
     sail-mysql:
