--- a/pizza-client/.env.example
+++ b/pizza-client/.env.example
@@ -1,4 +1,11 @@
-APP_NAME=Laravel
+WWWGROUP=1000
+WWWUSER=1000
+APP_PORT=8082
+FORWARD_DB_PORT=33062
+FORWARD_REDIS_PORT=63792
+VITE_PORT=51732
+
+APP_NAME=pizza-client
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
