--- a/pizza-client/docker-compose.yml
+++ b/pizza-client/docker-compose.yml
@@ -20,7 +20,7 @@ services:
         volumes:
             - '.:/var/www/html'
         networks:
-            - sail
+            - client-pizza-net
         depends_on:
             - mysql
             - redis
@@ -39,7 +39,7 @@ services:
             - 'sail-mysql:/var/lib/mysql'
             - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
         networks:
-            - sail
+            - client-pizza-net
         healthcheck:
             test:
                 - CMD
@@ -55,7 +55,7 @@ services:
         volumes:
             - 'sail-redis:/data'
         networks:
-            - sail
+            - client-pizza-net
         healthcheck:
             test:
                 - CMD
@@ -64,8 +64,10 @@ services:
             retries: 3
             timeout: 5s
 networks:
-    sail:
-        driver: bridge
+    client-pizza-net:
+        external: true
+        name: pizza-back_default
+
 volumes:
     sail-mysql:
         driver: local
